packages/llvm/src/tests/variable_declaration/snapshots/llvm__tests__variable_declaration__let_variable_declaration__const _x = "12"let x  = (_x).snap
---
source: packages/llvm/src/tests/variable_declaration/let_variable_declaration.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %_x_ = alloca [2 x i8], align 1
  %"0" = getelementptr [2 x i8], [2 x i8]* %_x_, i64 0, i64 0
  store i8 49, i8* %"0", align 1
  %"1" = getelementptr [2 x i8], [2 x i8]* %_x_, i64 0, i64 1
  store i8 50, i8* %"1", align 1
  %x_ = alloca [2 x i8], align 1
  %"2" = getelementptr [2 x i8], [2 x i8]* %_x_, i64 0, i64 0
  %"3" = getelementptr [2 x i8], [2 x i8]* %x_, i64 0, i64 0
  %"4" = load i8, i8* %"2", align 1
  store i8 %"4", i8* %"3", align 1
  %"5" = getelementptr [2 x i8], [2 x i8]* %_x_, i64 0, i64 1
  %"6" = getelementptr [2 x i8], [2 x i8]* %x_, i64 0, i64 1
  %"7" = load i8, i8* %"5", align 1
  store i8 %"7", i8* %"6", align 1
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

